2006-02-08  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c(FA_GetBufferProperties): Emit a warning when
	alIsBuffer does not return AL_FALSE for AL_NONE.

	* tests/altest/altest.c(FA_EnumerationValue): Test that alcGetEnumValue
	and alGetEnumValue are really disjunct.

2006-01-20  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c(SA_ListenerOrientation): Don't use the ambiguous
	"foo=-1".

	* tests/altest/altest.c(FA_EnumerationValue): Distinguish between ALC
	enums and AL enums.

	* tests/altest/altest.c(I_SetSourceOffsetTest): Fixed ambiguity.

	* Initial version. Very incomplete, just to get "contrib" started.