@@ -1,0 +1,4 @@
+.deps
+Makefile
+Makefile.in
+panning2d
