@@ -1,0 +1,4 @@
+noinst_PROGRAMS = panning2d
+
+# ToDo: Quick hack only, use configure to find out the right flags.
+panning2d_LDFLAGS = -lglut -lalut
